# ResuenaWebApp

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  README.md  alembic.ini  docker-compose.yml  next.config.mjs  package.json  playwright.config.ts  pyproject.toml  requirements.txt  tailwind.config.ts
.opencode/commands/: commit.md
alembic/: env.py
alembic/versions/: 0001_initial_schema.py  0002_seed_defaults.py  0003_solicitud_curador_aplicacion.py  0004_seed_config_publica.py  0005_invitaciones_sello.py  0006_paquetes_usd.py  0007_precio_medios.py  0008_canales_revision.py  0009_curador_medio_redes.py
app/: globals.css  layout.tsx  page.tsx
app/(auth)/: layout.tsx
app/(dashboard)/: layout.tsx
app/onboarding/: layout.tsx
components/admin/: CanalRevisionCard.tsx  ConfigAccordion.tsx  PaquetesTable.tsx  RechazarModal.tsx  SolicitudCard.tsx
components/auth/: AuthCard.tsx  OTPModal.tsx  PasswordStrengthMeter.tsx  RegisterForm.tsx
components/creditos/: ConfirmarCompraModal.tsx  HistorialTransacciones.tsx  PaqueteCard.tsx
components/curador/: MedioCard.tsx  MedioFormModal.tsx  MediosPerfilCard.tsx
components/forms/: PhotoUploader.tsx
components/layout/: DashboardProvider.tsx  Header.tsx  Sidebar.tsx  UserMenu.tsx
components/onboarding/: GenreChip.tsx  (+5 more)
docs/: AGENTES.md  PLAN.md  SESION-TEMPLATE.md  fase-01.md  fase-02.md  fase-03.md  fase-04.md  fase-04b.md  fase-05.md  fase-06.md  fase-06b.md  fase-06c.md  fase-06e.md  fase-06f.md  fase-06g.md  fase-07.md  fase-08.md  fase-09.md  fase-10.md  fase-11.md  fase-12.md  fase-13.md  fase-14.md  fase-15.md
hooks/: useOnboardingProgress.ts  usePaqueteCard.ts
infra/: Dockerfile.api  Dockerfile.app
lib/: api.ts  password.ts  server-api.ts
src/: main.py
tests/: conftest.py
(+143 files in other folders)
