[project]
name = "resuena"
version = "0.1.0"
description = "Plataforma de gestión de campañas musicales"
requires-python = ">=3.12"

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "I",    # isort
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "ASYNC",# flake8-async
]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.ruff.lint.flake8-bugbear]
# Patrón estándar de FastAPI: los `Depends`/`Query`/etc. en defaults son
# intencionales y seguros (no es el antipatrón que B008 detecta).
extend-immutable-calls = [
    "fastapi.Depends",
    "fastapi.Query",
    "fastapi.Path",
    "fastapi.Body",
    "fastapi.Header",
    "fastapi.Cookie",
    "fastapi.Form",
    "fastapi.File",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-q"
